# pyproject.toml
[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=58",
  "setuptools_scm>=6.2",
  'tomli>=1; python_version < "3.11"',
  'typing-extensions; python_version < "3.11"',
  "wheel",
]

[project]
name = "moniplot"
description = "moniplot is a Python data visualization library for (satellite) instrument monitoring"
readme = "README.md"
license.file = "LICENSE"
authors = [
  {name = "Richard van Hees", email = "R.M.van.Hees@sron.nl"},
  {name = "Paul Tol", email = "P.J.J.Tol@sron.nl"},
]
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Atmospheric Science",
  "Topic :: Scientific/Engineering :: Visualization"
]
dynamic = [
  "version",
]
dependencies = [
  "h5py>=3.8",
  "matplotlib>=3.5",
  "Cartopy>0.21",
  "numpy>=1.19",
  "xarray>=2022.3",
  'tomli>=1; python_version < "3.11"',
  'typing-extensions; python_version < "3.11"',
]

[project.urls]
homepage = "https://github.com/rmvanhees/moniplot"
documentation = "https://moniplot.readthedocs.io/en/latest/"
# Source = "https://github.com/rmvanhees/moniplot"
# Changelog = "https://github.com/rmvanhees/moniplot/HISTORY.rst"
"Issue tracker" = "https://github.com/rmvanhees/moniplot/issues"

[tool.setuptools.packages.find]
namespaces = true
where = ["src"]

[tool.setuptools_scm]

[tool.ruff]
select = [
  "D",   # pydocstyle
  "E",   # pycodestyle
  "W",   # pycodestyle
  "F",   # pyflakes
  "I",   # isort
  "UP",  # pyupgrade
  "ANN", # flake8-annotations
  "B",   # flake8-bugbear
  "Q",   # flake8-quotes
  "SIM", # flake8-simplify
  "TID", # flake8-tidy-imports
  "TCH", # flake8-type-checking
  "NPY", # NumPy-specific rules
]
# ignore = ["D205"]

[tool.ruff.pydocstyle]
convention = "pep257"

[tool.ruff.flake8-quotes]
inline-quotes = "single"
