[metadata]
name = moniplot
description = moniplot is a Python data visualization library for (satellite) instrument monitoring.
license = GPLv3
license_file = LICENSE
long_description = file:README.md
url = https://gitlab.sron.nl/Richardh/moniplot.git
author = Richard van Hees
author_email = r.m.van.hees@sron.nl
maintainer = Richard van Hees
maintainer_email = r.m.van.hees@sron.nl
classifiers=
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows :: Windows 10
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Atmospheric Science

[options]
zip_safe = False
package_dir =
   =src
packages = find:
install_requires =
    numpy>=1.22
    h5py>=3.5
    xarray>=0.20
    matplotlib>=3.5
python_requires = >=3.8

[options.packages.find]
where = src

[options.extras_require]
toml = toml
